@@ -44,7 +44,7 @@ import static org.testng.Assert.assertTrue;
  * @modules jdk.incubator.jextract
  * @library /test/lib
  * @build ConstantsTest
- * @run testng/othervm -Dforeign.restricted=permit ConstantsTest
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED ConstantsTest
  */
 public class ConstantsTest extends JextractToolRunner {
     private Class<?> constants;
