@@ -37,7 +37,7 @@ import static jdk.incubator.foreign.CLinker.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextract -t test.jextract.vsprintf -l VSPrintf -- vsprintf.h
- * @run testng/othervm -Dforeign.restricted=permit Test8252016
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED Test8252016
  */
 /*
  * @test id=sources
@@ -46,12 +46,12 @@ import static jdk.incubator.foreign.CLinker.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextractSources -t test.jextract.vsprintf -l VSPrintf -- vsprintf.h
- * @run testng/othervm -Dforeign.restricted=permit Test8252016
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED Test8252016
  */
 public class Test8252016 {
     @Test
     public void testsVsprintf() {
-        try (ResourceScope scope = ResourceScope.ofConfined()) {
+        try (ResourceScope scope = ResourceScope.newConfinedScope()) {
             MemorySegment s = MemorySegment.allocateNative(1024, scope);
             VaList vaList = VaList.make(b -> {
                 b.vargFromInt(C_INT, 12);
@@ -59,7 +59,7 @@ public class Test8252016 {
                 b.vargFromLong(C_LONG_LONG, -200L);
                 b.vargFromLong(C_LONG_LONG, Long.MAX_VALUE);
             }, scope);
-            my_vsprintf(s, toCString("%hhd %.2f %lld %lld"), vaList);
+            my_vsprintf(s, toCString("%hhd %.2f %lld %lld", scope), vaList);
             String str = toJavaString(s);
             assertEquals(str, "12 5.50 -200 " + Long.MAX_VALUE);
        }
