@@ -36,7 +36,7 @@ import static test.jextract.test8259473.test8259473_h.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextract -t test.jextract.test8259473 -- test8259473.h
- * @run testng/othervm -Dforeign.restricted=permit LibTest8259473Test
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibTest8259473Test
  */
 /*
  * @test id=sources
@@ -45,7 +45,7 @@ import static test.jextract.test8259473.test8259473_h.*;
  * @library ..
  * @modules jdk.incubator.jextract
  * @run driver JtregJextractSources -t test.jextract.test8259473 -- test8259473.h
- * @run testng/othervm -Dforeign.restricted=permit LibTest8259473Test
+ * @run testng/othervm --enable-native-access=jdk.incubator.jextract,ALL-UNNAMED LibTest8259473Test
  */
 public class LibTest8259473Test {
     @Test
